creating new file

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         welcome to hyd
         thanks every one !
     </header>
+    <footer>
+        <h1>jyfhgjhjlkjh</h1>
+    </footer>
 </h1>
     
 </body>
